--- a/frontend/scss/search.scss
+++ b/frontend/scss/search.scss
@@ -49,7 +49,7 @@
 }
 
 .search-photo {
-    padding: .5em;
+    margin: .5em;
     opacity: 1;
 	-webkit-transition: .3s ease-in-out;
 	transition: .3s ease-in-out;
